# CAU-2025-2-DIP-final-project

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REFACTOR_PLAN.md  classical_methods.py  compare.py  dataset.py  gui_app.py  layout_utils.py  loss.py  main.py  model.py  plot_utils.py  pyproject.toml  pytest.ini  requirements.txt  test_classical_methods.py  test_compare.py  test_dataset.py  test_loss.py  test_model.py  test_train.py  train.py  zero_dce.py
docs/: COMPARISON_USAGE_GUIDE.md  GUI_SPECIFICATION.md  OPTIMIZATION_GUIDE.md  PLOT_UTILS_GUIDE.md
gui/: __init__.py  main_window.py
gui/dialogs/: __init__.py  error_dialog.py  method_selection_dialog.py  preferences_dialog.py
gui/utils/: __init__.py  enhancement_methods.py  enhancement_result.py  enhancement_runner.py  image_processor.py  model_loader.py  settings.py
gui/widgets/: __init__.py  comparison_cell.py  comparison_grid.py  enhance_button.py  histogram_overlay.py  image_panel.py
tests/: __init__.py  test_compare_columns.py  test_gui_dialogs_method_selection.py  test_gui_dialogs_preferences.py  test_gui_enhancement_timing.py  test_gui_image_panel_timing.py  test_gui_model_menu.py  test_gui_model_settings.py  test_gui_recent_files.py  test_gui_smoke.py  test_gui_utils_enhancement_methods.py  test_gui_utils_enhancement_result.py  test_gui_utils_enhancement_runner.py  test_gui_utils_image_processor.py  test_gui_utils_model_loader.py  test_gui_utils_settings.py  test_gui_widgets_comparison_cell.py  test_gui_widgets_comparison_grid.py  test_gui_widgets_histogram_overlay.py  test_gui_widgets_image_panel.py  test_layout_utils.py  test_plot_utils.py
