[project]
name = "redo-zero-dce-keras"
version = "0.1.0"
description = "Zero-DCE: Zero-Reference Deep Curve Estimation for low-light image enhancement in Keras 3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyqt6>=6.10.0",
    "tensorflow[and-cuda]>=2.20.0",
]
